Add project references and NuGet packages
- sln file now tracks all project files
- added PdfPig and VersOne.Epub to Core project
- added core and persistence libraries to cli project

--- a/TypingTrainer.Core/TypingTrainer.Core.csproj
+++ b/TypingTrainer.Core/TypingTrainer.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PdfPig" Version="0.1.11" />
+    <PackageReference Include="VersOne.Epub" Version="3.3.4" />
+  </ItemGroup>
+
 </Project>
