--- a/TypingTrainer.Cli/TypingTrainer.Cli.csproj
+++ b/TypingTrainer.Cli/TypingTrainer.Cli.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\TypingTrainer.Core\TypingTrainer.Core.csproj" />
+    <ProjectReference Include="..\TypingTrainer.Persistence\TypingTrainer.Persistence.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
