Add NuGet package & text extraction interfaces
- F23.StringSimilarity for future spelling mistake checking
- ITextExtractor & ITextSource to handle different textSources (e.g., pdf, txt, epub)

--- a/TypingTrainer.Core/TypingTrainer.Core.csproj
+++ b/TypingTrainer.Core/TypingTrainer.Core.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="F23.StringSimilarity" Version="7.0.0" />
     <PackageReference Include="PdfPig" Version="0.1.11" />
     <PackageReference Include="VersOne.Epub" Version="3.3.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
